--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>React App</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
   </head>
   <body>
     <div id="root"></div>
